--- a/gsoc-17.html
+++ b/gsoc-17.html
@@ -89,7 +89,7 @@
                     </div>
                 </div>
         </header>
-        <div class="panel   -space-top-1 -space-bottom-1 getting-set-up-panel">
+        <div class="panel   -space-top-2 -space-bottom-1 getting-set-up-panel">
             <div class="container -medium ">
                 <h2 style="text-align: center;" class="-title-1">GSoC 2017 @ WolfBeacon</h2>
             </div>
@@ -101,7 +101,7 @@
             <p><a href="https://summerofcode.withgoogle.com">Google Summer of Code</a> is a global program focused on introducing students to open source software development. Students work on a 3 month programming project with an open source organization during their break from university. Since its inception in 2005, the program has brought together almost 11,000 student participants and 10,000 mentors from over 113 countries worldwide. Google Summer of Code has produced over 50 million lines of code for 515 open source organizations.</p>
             <p>As a part of Google Summer of Code, student participants are paired with a mentor from the participating organizations, gaining exposure to real-world software development and techniques. Students have the opportunity to spend the break between their school semesters earning a <a href="https://developers.google.com/open-source/gsoc/help/student-stipends">stipend</a> while working in areas related to their interests.</p>
             <p>In turn, the participating organizations are able to identify and bring in new developers who implement new features and hopefully continue to contribute to open source even after the program is over. Most importantly, more code is created and released for the use and benefit of all.</p>
-            <p>The GSoC programme has produced some amazing Open Source Student Developers across the years, giving them a great deal of respect from their peers and lots of credibility early on in their career often leading to them landing their dream jobs and internships.</p>
+            <p>The GSoC programme has produced some amazing Open Source Student Developers across the years, giving them a great deal of respect from their peers, lots of credibility early on in their career and often leading to them landing their dream jobs and internships.</p>
             <br>
             <br>
             <hr>
@@ -127,7 +127,7 @@
             <br>
             <h2 id="studentapplicationguidelines"><u>Student Application Guidelines</u></h2>
             <br>
-            <p>Thinking about contributing to WolfBeacon? That's great! We're always on the lookout for passionate students, developers, Hackathon Experts and Open-Source Ninjas. A few basic qualities we are looking for in potential GSoC students are:</p>
+            <p>Interested in WolfBeacon? Awesome! We're always on the lookout for passionate students, developers, Hackathon Experts and Open-Source Ninjas. A few basic qualities we are looking for in potential GSoC students are:</p>
             <div class="container">
                 <ul style=" list-style-type: disc;">
                     <li>Passionate about about our cause, e.i Hackathons, Hacking, FOSS and Community!</li>
@@ -145,17 +145,17 @@
                     <li>We have a <em>enviable</em> set of sponsors. They've been gracious enough to offer us their otherwise paid services so we've got access to bleeding edge technologies like powerful bare-metal infrastructure for hosting by <a href="https://cycle.io">Cycle.io</a>, state of the art authentication infrastructure by <a href="https://auth0.com">Auth0</a> and loads more!</li>
                     <li>Sponsored Opportunities to attend the best Hackathons across the planet <em>#hype</em></li>
                     <li>AWS credits, Free domains, Stickers and all the good stuff. <em>#awwwwyeah!</em></li>
-                    <li>Excellent networking opportunities with our talented community and team members. We have open source ninjas,ex-GSoCers, students who are really experienced with their stack and many of them have worked or interned at enviable places.</li>
+                    <li>Excellent networking opportunities with our talented community and team members. We've got folks who are open source ninjas, ex-GSoCers and work or have interned at enviable places.</li>
                 </ul>
             </div>
             <br>
             <br>
             <h3 id="howtoapply">How to Apply</h3>
-            <p>Interested in WolfBeacon? Awesome! The basic process would be:</p>
+            <p>The basic process would be:</p>
             <div class="container">
                 <ol style="display: list-item!important; list-style-position: inside !important;">
-                    <li>1. Introduce yourself in the Disqus section and present a short abstract of your interpretation of the project.</li>
-                    <li>2. Feel free to join the IRC channel (see <a href="#contact">contact</a>) where you can discuss ideas with mentors, community members and other folks.</li>
+                    <li>1. Introduce yourself  and present a short abstract of your ideas for the project in the <a href="#disqus_thread">Disqus section</a> at the bottom of this page</li>
+                    <li>2. Feel free to join the <i>#wolfbeacon </i> freenode IRC channel (see <a href="#contact">contact</a>) where you can discuss ideas with mentors, community members and other folks.</li>
                     <li>3. Start formalising the requirements, get specific and spec out a great proposal on <a href="https://docs.google.com/document/u/0/?usp=mkt_docs">Google Docs.</a></li>
                     <li>4. Paste a link to proposal in the Disqus section with comments/feedback enabled on your doc so you can get feedback. </li>
                 </ol>
@@ -174,7 +174,7 @@
             <p>The main objective of this project is to build a WolfBeacon's Analytics Platform. An integral part of every system in 2017 is the data you can extract from it and manipulate it so that you will be able to provide a better experience for everyone.</p>
             <p>WolfBeacon's Analytics Platform will allow Hackathon Organizers to reach deeper into the interactions and reviews of workshops/ events and the Hackathon itself. With a modern and clean UI paired with UX design strategies, the Analytics Platform will revolutionize the way Hackathons are organized and how feedback is responded to within the coming years. </p>
             <p>We're looking for talented and passionate Front-end developers who will take a mock-up into a full functioning application with their development skills.</p>
-            <p><em>Skillset</em>: HTML/CSS/JavaScript, <a href="https://facebook.github.io/react/">React.js</a>(preferred)/<a href="https://angularjs.org/">Angular.js</a>, <a href="https://jquery.com">jQuery</a>. This goes without saying but we expect you to come up with wireframes, prototypes and adhere to all the typical roles that a UI/UX/Frontend developer would normally undertake. Some basic understanding of Analytics/Data Science is a plus but not a requirement per say.</p>
+            <p><em>Skillset</em>:  The usual - <i>HTML/CSS/JavaScript/jQuery</i>. Experience with <a href="https://facebook.github.io/react/">React.js</a> or <a href="https://angularjs.org/">Angular.js</a>. As a good UI/UX/Frontend developer, we expect you to come up with wireframes and prototypes, in turn translating them into code. Some basic understanding of Analytics/Data Science is a plus but not a requirement.</p>
             <p><strong>Admin:</strong> <a href="https://www.linkedin.com/in/ralphmaamari">Ralph Maamari</a></p>
             <p><strong>Mentors:</strong> <a href="https://www.linkedin.com/in/avikantz">Avikant</a> &amp; <a href="https://www.linkedin.com/in/nairakshay">Akshay</a></p>
             <p>
@@ -182,11 +182,11 @@
             </p>
             <h3 id="2wolfbeaconbackendproject">2. WolfBeacon Backend Project</h3>
             <p>The WolfBeacon Server forms the Backend and API which is utilised by all the apps . We've also built the world's first API that shows you all the Hackathons around the planet in ascending order of their radial distance on simply entering your coordinates. Well, that's just one of the things that makes the backend so cool.</p>
-            <p>The challenge is to apply solid software engineering principles and continue work on building a robust, scalable Backend. Initial challenges would involve shifting to the new Auth0 API implementation and using v1 of the Spring Security toolkit provided by Auth0, implementing a CI/CD pipeline integrating the Cycle API which would enable faster deployments to production and including featured Hackathons endpoints, User Hackathons endpoints and profiles with the help of user data from Auth0.</p>
+            <p>The challenge is to apply solid software engineering principles and continue work on building a robust, scalable Backend. Initial challenges would involve shifting to the new Auth0 API implementation and using v1 of the their Spring Security toolkit library, implementing a CI/CD pipeline integrating the Cycle API which would enable faster deployments to production and including featured Hackathons endpoints, User Hackathons endpoints and profiles with the help of user data from Auth0.</p>
             <p><em>Skillset</em>: JAVA (highly proficient), <a href="https://projects.spring.io/spring-boot/">Spring-Boot</a>, <a href="http://hibernate.org/">Hibernate</a>, <a href="https://www.docker.com/">Docker</a>, familiarity with <a href="https://auth0.com">Auth0</a> and <a href="https://cycle.io">Cycle</a></p>
             <p><strong>Admin:</strong> <a href="https://www.linkedin.com/in/ralphmaamari">Ralph Maamari</a> </p>
             <p><strong>Mentors:</strong> Alex</p>
-            <p><strong>Note:</strong> The Backend project makes for a rather challenging and demanding task since familiarity/experience with the current codebase and all the relevant technologies is a must. We're on a tight deadline and since all the apps are dependent on the Backend, it's imperative that we get tested code into deployment ASAP. With that being said, we're looking forward to proposals from developers with a few solid years of experience and/or those who have already been contributing to WolfBeacon.</p>
+            <p><strong>Note:</strong> The Backend project makes for a rather challenging and demanding task since familiarity/experience with the current codebase and all the relevant technologies is a must. We're on a tight deadline and since all the apps are dependent on the Backend, it's imperative that we get tested code into deployment ASAP. With that being said, we're looking forward to proposals from developers with solid as well as relevant experience and/or those who have already been contributing to WolfBeacon.</p>
             <br>
             <br>
             <hr>
@@ -194,7 +194,7 @@
             <br>
             <h2 id="contact">Contact</h2>
             <p>As far as GSoC specifics go, we'd like to have your ideas and proposal links on our Disqus section as we mentioned earlier. This would help aggregate the ideas and keep a log of FAQs.</p>
-            <p>To communicate with other members and potential students to share ideas, join the <code><b>#wolfbeacon</b></code> IRC channel on <a href="https://webchat.freenode.net">irc.freenode.net</a>. Our bot syncs all the IRC comms with our Slack channel we use internally. Needless to say, all communication is two-way, realtime and public.
+            <p>Feel free to join the <code><b>#wolfbeacon</b></code> IRC channel on <a href="https://webchat.freenode.net">irc.freenode.net</a> to exchange ideas with members and other potential students. We're internally on Slack but our IRC and Slack channels are synced via <a href="https://github.com/bholagabbar/irackbot" target="_blank">irackbot</a> so all communication between them is two-way, realtime and public.
             </p>
             <p>If you have suggestions/questions/specific queries which cannot be answered in public, feel free to email us at <a href="mailto:hello@wolfbeacon.com">hello@wolfbeacon.com</a></p>
             <br>
@@ -207,6 +207,7 @@
         <div class=" -space-top-3 "></div>
         <!-- ethos_tiles_container -->
         </div>
+        <br>
         <footer class="footer">
             <div class="container">
                 <div class="footer__inner">
